--- a/crm.html
+++ b/crm.html
@@ -2486,7 +2486,7 @@
 
     /* -------- Init -------- */
 
-      document.addEventListener('DOMContentLoaded', () => {
+         document.addEventListener('DOMContentLoaded', () => {
       setupTabs();
       setupCustomerForm();
       setupSchedulePanel();
@@ -2494,9 +2494,11 @@
       setupOverviewTab();
       setupTasksTab();
       setupBackupControls();
+      setupScheduleSearch();
       loadState();
       renderAll();
     });
+
 
   })();
 </script>
