--- a/project.html
+++ b/project.html
@@ -5,267 +5,286 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Project Tasks → Salesbuildr TinyMCE Widget Generator</title>
 
-  <style>
-    :root{
-      --bg:#ffffff;
-      --surface:#ffffff;
-      --surface2:#f8fafc;
-      --text:#0f172a;
-      --muted:#475569;
-      --line:rgba(15,23,42,.14);
-      --shadow: 0 10px 26px rgba(15,23,42,.10);
-      --accent:#2563eb;
-      --accent2:#059669;
-      --danger:#dc2626;
+<style>
+  :root{
+    --bg:#ffffff;
+    --surface:#ffffff;
+    --surface2:#f8fafc;
+    --text:#0f172a;
+    --muted:#475569;
+    --line:rgba(15,23,42,.14);
+    --shadow: 0 10px 26px rgba(15,23,42,.10);
+    --accent:#2563eb;
+    --accent2:#059669;
+    --danger:#dc2626;
 
-      --sans: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Helvetica Neue", Helvetica, "Apple Color Emoji", "Segoe UI Emoji";
-      --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-    }
+    --sans: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Helvetica Neue", Helvetica, "Apple Color Emoji", "Segoe UI Emoji";
+    --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  }
 
-    *{ box-sizing:border-box; }
-    body{
-      margin:0;
-      font-family:var(--sans);
-      background: var(--bg);
-      color: var(--text);
-      padding: 22px;
-    }
+  *{ box-sizing:border-box; }
+  body{
+    margin:0;
+    font-family:var(--sans);
+    background: var(--bg);
+    color: var(--text);
+    padding: 22px;
+  }
 
-    .wrap{ max-width: 1200px; margin: 0 auto; }
+  .wrap{ max-width: 1200px; margin: 0 auto; }
 
-    header{ margin-bottom: 14px; }
-    h1{ margin:0; font-size:18px; letter-spacing:.2px; }
-    .sub{
-      margin: 6px 0 0 0;
-      color: var(--muted);
-      font-size: 13px;
-      line-height: 1.35;
-      max-width: 900px;
-    }
+  header{ margin-bottom: 14px; }
+  h1{ margin:0; font-size:18px; letter-spacing:.2px; }
+  .sub{
+    margin: 6px 0 0 0;
+    color: var(--muted);
+    font-size: 13px;
+    line-height: 1.35;
+    max-width: 900px;
+  }
 
-    .card{
-      background: var(--surface);
-      border: 1px solid var(--line);
-      border-radius: 14px;
-      padding: 14px;
-      box-shadow: var(--shadow);
-    }
+  .card{
+    background: var(--surface);
+    border: 1px solid var(--line);
+    border-radius: 14px;
+    padding: 14px;
+    box-shadow: var(--shadow);
+  }
 
-    .toolbar{
-      display:flex;
-      flex-wrap:wrap;
-      gap: 12px;
-      align-items:end;
-      justify-content:space-between;
-      margin: 10px 0 14px 0;
-    }
-    .left, .right{ display:flex; flex-wrap:wrap; gap: 10px; align-items:end; }
+  .toolbar{
+    display:flex;
+    flex-wrap:wrap;
+    gap: 12px;
+    align-items:end;
+    justify-content:space-between;
+    margin: 10px 0 14px 0;
+  }
+  .left, .right{ display:flex; flex-wrap:wrap; gap: 10px; align-items:end; }
 
-    label{
-      font-size:12px;
-      color: var(--muted);
-      display:flex;
-      flex-direction:column;
-      gap:6px;
-      min-width: 220px;
-    }
+  label{
+    font-size:12px;
+    color: var(--muted);
+    display:flex;
+    flex-direction:column;
+    gap:6px;
+    min-width: 220px;
+  }
 
-    input[type="number"], input[type="text"], textarea{
-      font: 13px var(--sans);
-      padding: 9px 10px;
-      border-radius: 10px;
-      border: 1px solid var(--line);
-      background: #ffffff;
-      color: var(--text);
-      outline:none;
-    }
-    input[type="number"]{ width: 140px; }
-    input[type="text"]{ width: 100%; }
-    textarea{ width:100%; min-height: 40px; resize: vertical; }
+  input[type="number"], input[type="text"], textarea{
+    font: 13px var(--sans);
+    padding: 9px 10px;
+    border-radius: 10px;
+    border: 1px solid var(--line);
+    background: #ffffff;
+    color: var(--text);
+    outline:none;
+  }
+  input[type="number"]{ width: 140px; }
+  input[type="text"]{ width: 100%; }
+  textarea{ width:100%; min-height: 40px; resize: vertical; }
 
-    .btn{
-      border: 1px solid var(--line);
-      background: #ffffff;
-      color: var(--text);
-      padding: 9px 12px;
-      border-radius: 12px;
-      cursor:pointer;
-      font-size: 13px;
-      transition: transform .05s ease, background .15s ease, border-color .15s ease;
-      user-select:none;
-      display:inline-flex;
-      gap:8px;
-      align-items:center;
-      justify-content:center;
-      white-space:nowrap;
-    }
-    .btn:hover{ background: #f8fafc; border-color: rgba(15,23,42,.22); }
-    .btn:active{ transform: translateY(1px); }
+  .btn{
+    border: 1px solid var(--line);
+    background: #ffffff;
+    color: var(--text);
+    padding: 9px 12px;
+    border-radius: 12px;
+    cursor:pointer;
+    font-size: 13px;
+    transition: transform .05s ease, background .15s ease, border-color .15s ease;
+    user-select:none;
+    display:inline-flex;
+    gap:8px;
+    align-items:center;
+    justify-content:center;
+    white-space:nowrap;
+  }
+  .btn:hover{ background: #f8fafc; border-color: rgba(15,23,42,.22); }
+  .btn:active{ transform: translateY(1px); }
 
-    .btn.primary{
-      background: rgba(37,99,235,.10);
-      border-color: rgba(37,99,235,.35);
-    }
-    .btn.primary:hover{ background: rgba(37,99,235,.14); }
+  .btn.primary{
+    background: rgba(37,99,235,.10);
+    border-color: rgba(37,99,235,.35);
+  }
+  .btn.primary:hover{ background: rgba(37,99,235,.14); }
 
-    .btn.good{
-      background: rgba(5,150,105,.10);
-      border-color: rgba(5,150,105,.35);
-    }
-    .btn.good:hover{ background: rgba(5,150,105,.14); }
+  .btn.good{
+    background: rgba(5,150,105,.10);
+    border-color: rgba(5,150,105,.35);
+  }
+  .btn.good:hover{ background: rgba(5,150,105,.14); }
 
-    .btn.danger{
-      background: rgba(220,38,38,.08);
-      border-color: rgba(220,38,38,.35);
-    }
-    .btn.danger:hover{ background: rgba(220,38,38,.12); }
+  .btn.danger{
+    background: rgba(220,38,38,.08);
+    border-color: rgba(220,38,38,.35);
+  }
+  .btn.danger:hover{ background: rgba(220,38,38,.12); }
 
-    .grid{
-      width:100%;
-      overflow:auto;
-      border: 1px solid var(--line);
-      border-radius: 12px;
-    }
-    table{
-      width:100%;
-      border-collapse:separate;
-      border-spacing:0;
-      min-width: 980px;
-    }
-    thead th{
-      position:sticky;
-      top:0;
-      background: var(--surface2);
-      border-bottom: 1px solid var(--line);
-      font-size: 12px;
-      color: var(--muted);
-      text-align:left;
-      padding: 10px;
-      z-index: 1;
-    }
-    tbody td{
-      border-bottom: 1px solid rgba(15,23,42,.06);
-      padding: 10px;
-      vertical-align: top;
-    }
-    tbody tr:hover td{ background: rgba(15,23,42,.02); }
+  .grid{
+    width:100%;
+    overflow:auto;
+    border: 1px solid var(--line);
+    border-radius: 12px;
+  }
+  table{
+    width:100%;
+    border-collapse:separate;
+    border-spacing:0;
+    min-width: 980px;
+  }
+  thead th{
+    position:sticky;
+    top:0;
+    background: var(--surface2);
+    border-bottom: 1px solid var(--line);
+    font-size: 12px;
+    color: var(--muted);
+    text-align:left;
+    padding: 10px;
+    z-index: 1;
+  }
+  tbody td{
+    border-bottom: 1px solid rgba(15,23,42,.06);
+    padding: 10px;
+    vertical-align: top;
+  }
+  tbody tr:hover td{ background: rgba(15,23,42,.02); }
 
-    .col-task{ width:22%; min-width:220px; }
-    .col-role{ width:14%; min-width:140px; }
-    .col-hours{ width:120px; }
-    .col-duration{ width:140px; color: var(--muted); font-size: 13px; white-space:nowrap; }
-    .col-notes{ width:34%; min-width:280px; }
-    .col-actions{ width:80px; text-align:right; white-space:nowrap; }
+  .col-task{ width:22%; min-width:220px; }
+  .col-role{ width:14%; min-width:140px; }
+  .col-hours{ width:120px; }
+  .col-duration{ width:140px; color: var(--muted); font-size: 13px; white-space:nowrap; }
+  .col-notes{ width:34%; min-width:280px; }
+  .col-actions{ width:80px; text-align:right; white-space:nowrap; }
 
-    .summary{
-      display:flex;
-      flex-wrap:wrap;
-      gap: 10px;
-      align-items:center;
-      justify-content:space-between;
-      margin-top: 14px;
-      padding-top: 14px;
-      border-top: 1px solid rgba(15,23,42,.10);
-    }
-    .pill{
-      display:inline-flex;
-      gap:8px;
-      align-items:center;
-      border: 1px solid rgba(15,23,42,.12);
-      background: #ffffff;
-      padding: 10px 12px;
-      border-radius: 999px;
-      font-size: 13px;
-      color: var(--text);
-    }
-    .pill small{ color: var(--muted); font-size: 12px; }
-    .pill b{ font-weight: 800; }
+  .summary{
+    display:flex;
+    flex-wrap:wrap;
+    gap: 10px;
+    align-items:center;
+    justify-content:space-between;
+    margin-top: 14px;
+    padding-top: 14px;
+    border-top: 1px solid rgba(15,23,42,.10);
+  }
+  .pill{
+    display:inline-flex;
+    gap:8px;
+    align-items:center;
+    border: 1px solid rgba(15,23,42,.12);
+    background: #ffffff;
+    padding: 10px 12px;
+    border-radius: 999px;
+    font-size: 13px;
+    color: var(--text);
+  }
+  .pill small{ color: var(--muted); font-size: 12px; }
+  .pill b{ font-weight: 800; }
 
-    .hint{
-      font-size: 12px;
-      color: var(--muted);
-      margin-top: 8px;
-      line-height: 1.45;
-    }
-    .kbd{
-      font-family: var(--mono);
-      font-size: 11px;
-      padding: 2px 6px;
-      border-radius: 6px;
-      border: 1px solid rgba(15,23,42,.16);
-      background: #ffffff;
-      color: var(--text);
-    }
+  .hint{
+    font-size: 12px;
+    color: var(--muted);
+    margin-top: 8px;
+    line-height: 1.45;
+  }
+  .kbd{
+    font-family: var(--mono);
+    font-size: 11px;
+    padding: 2px 6px;
+    border-radius: 6px;
+    border: 1px solid rgba(15,23,42,.16);
+    background: #ffffff;
+    color: var(--text);
+  }
 
+  /* --- Bottom two panels: keep them fixed height; scroll inside --- */
+  .output{
+    margin-top: 16px;
+    display:grid;
+    grid-template-columns: 0.9fr 1.1fr; /* preview slightly wider */
+    gap: 12px;
+    align-items: stretch;
+  }
+  .output .card.panel{
+    height: 520px;              /* adjust to taste (e.g., 480/600) */
+    display:flex;
+    flex-direction: column;
+  }
+
+  @media (max-width: 980px){
     .output{
-      margin-top: 16px;
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 12px;
+      grid-template-columns: 1fr;
     }
-    @media (max-width: 980px){
-      .output{ grid-template-columns: 1fr; }
-      label{ min-width: 180px; }
+    .output .card.panel{
+      height: auto;
     }
+    label{ min-width: 180px; }
+  }
 
-    .panel h2{
-      margin:0 0 10px 0;
-      font-size: 14px;
-      letter-spacing: .2px;
-    }
-    .panel p{
-      margin:0 0 10px 0;
-      font-size: 12px;
-      color: var(--muted);
-      line-height: 1.45;
-    }
+  .panel h2{
+    margin:0 0 10px 0;
+    font-size: 14px;
+    letter-spacing: .2px;
+  }
+  .panel p{
+    margin:0 0 10px 0;
+    font-size: 12px;
+    color: var(--muted);
+    line-height: 1.45;
+  }
 
-    pre{
-      margin:0;
-      padding: 12px;
-      border-radius: 12px;
-      border: 1px solid var(--line);
-      background: #0b1220;
-      color: #e5e7eb;
-      overflow:auto;
-      font-family: var(--mono);
-      font-size: 12px;
-      line-height: 1.5;
-      min-height: 220px;
-      max-height: 420px;
-    }
+  /* Make code box scroll inside panel */
+  pre{
+    margin:0;
+    padding: 12px;
+    border-radius: 12px;
+    border: 1px solid var(--line);
+    background: #0b1220;
+    color: #e5e7eb;
+    overflow:auto;
+    font-family: var(--mono);
+    font-size: 12px;
+    line-height: 1.5;
 
-    .previewBox{
-      border: 1px solid var(--line);
-      border-radius: 12px;
-      background: #fff;
-      color: #111;
-      overflow:auto;
-      min-height: 220px;
-      padding: 12px;
-    }
+    flex: 1;
+    min-height: 0;
+  }
 
-    .toast{
-      position: fixed;
-      bottom: 18px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(15,23,42,.92);
-      border: 1px solid rgba(255,255,255,.14);
-      color: #fff;
-      padding: 10px 12px;
-      border-radius: 999px;
-      font-size: 13px;
-      opacity: 0;
-      pointer-events:none;
-      transition: opacity .2s ease, transform .2s ease;
-      box-shadow: 0 10px 25px rgba(15,23,42,.20);
-    }
-    .toast.show{
-      opacity: 1;
-      transform: translateX(-50%) translateY(-4px);
-    }
-  </style>
+  /* Make preview scroll inside panel */
+  .previewBox{
+    border: 1px solid var(--line);
+    border-radius: 12px;
+    background: #fff;
+    color: #111;
+    overflow:auto;
+
+    flex: 1;
+    min-height: 0;
+
+    padding: 12px;
+  }
+
+  .toast{
+    position: fixed;
+    bottom: 18px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(15,23,42,.92);
+    border: 1px solid rgba(255,255,255,.14);
+    color: #fff;
+    padding: 10px 12px;
+    border-radius: 999px;
+    font-size: 13px;
+    opacity: 0;
+    pointer-events:none;
+    transition: opacity .2s ease, transform .2s ease;
+    box-shadow: 0 10px 25px rgba(15,23,42,.20);
+  }
+  .toast.show{
+    opacity: 1;
+    transform: translateX(-50%) translateY(-4px);
+  }
+</style>
 </head>
 
 <body>
