--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Project Tasks → Salesbuildr TinyMCE Widget Generator</title>
+  <title>Project Tasks → Calulator</title>
 
 <style>
   :root{
@@ -290,12 +290,8 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Project Tasks → Salesbuildr TinyMCE Widget Generator</h1>
-      <p class="sub">
-        This is a lightweight, static (GitHub Pages-friendly) tool. Enter Task / Role / Est Hours / Notes.
-        Duration is calculated using <b>rounded up to next 0.5 day</b> and shown only internally.
-        The generated widget is customer-facing: it shows <b>Task, Role, Notes</b> + <b>Total Effort Hours</b>. Rows with hours = 0 are excluded.
-      </p>
+      <h1>Project Tasks → Calculator</h1>
+     
     </header>
 
     <div class="card">
