--- a/onboarding-planner.html
+++ b/onboarding-planner.html
@@ -20,10 +20,12 @@
       <button id="generateBtn" type="button">Generate Plan</button>
     </div>
 
-    <div class="card">
-      <h2>Plan Output</h2>
-      <pre id="output" class="output">Select a Go-Live date, then click “Generate Plan”.</pre>
-    </div>
+   <div class="card">
+  <h2>Plan</h2>
+  <div id="planCards" class="plan-cards">
+    <div class="hint">Select a Go-Live date, then click “Generate Plan”.</div>
+  </div>
+</div>
   </div>
 </body>
 </html>
