--- a/onboarding-planner.html
+++ b/onboarding-planner.html
@@ -11,14 +11,19 @@
   <div class="container">
     <h1>Onboarding Planner</h1>
 
-    <div class="controls">
-      <label class="field">
-        <span class="label">Go-Live Date</span>
-        <input type="date" id="goLiveDate" />
-      </label>
+<div class="controls">
+  <label class="field">
+    <span class="label">MSP</span>
+    <input type="text" id="mspName" placeholder="e.g., Acme MSP" />
+  </label>
 
-      <button id="generateBtn" type="button">Generate Plan</button>
-    </div>
+  <label class="field">
+    <span class="label">Go-Live Date</span>
+    <input type="date" id="goLiveDate" />
+  </label>
+
+  <button id="generateBtn" type="button">Generate Plan</button>
+</div>
 
    <div class="card">
   <h2>Plan</h2>
