--- a/onboarding-planner.html
+++ b/onboarding-planner.html
@@ -29,6 +29,13 @@
   <h2>Plan</h2>
   <div id="planCards" class="plan-cards">
     <div class="hint">Select a Go-Live date, then click “Generate Plan”.</div>
+    <div id="reportSection" class="report-section" style="display:none;">
+  <h3>Onboarding Report</h3>
+  <textarea id="reportOutput" rows="8"></textarea>
+  <div class="report-actions">
+    <button id="copyReportBtn" type="button">Copy Report</button>
+  </div>
+</div>
   </div>
 </div>
   </div>
