--- a/onboarding-planner.html
+++ b/onboarding-planner.html
@@ -9,7 +9,15 @@
 </head>
 <body>
   <div class="container">
-    <h1>Onboarding Planner</h1>
+<div class="app-banner">
+  <div class="banner-inner">
+    <img src="salesbuildr.webp" alt="Salesbuildr Logo" class="banner-logo" />
+    <div class="banner-text">
+      <div class="banner-title">Onboarding Project Planner</div>
+      <div class="banner-subtitle">4 Steps to Winning More Quotes</div>
+    </div>
+  </div>
+</div>
 
 <div class="controls">
   <label class="field">
