--- a/onboarding-planner.html
+++ b/onboarding-planner.html
@@ -11,7 +11,11 @@
   <div class="container">
 <div class="app-banner">
   <div class="banner-inner">
-    <img src="salesbuildr.webp" alt="Salesbuildr Logo" class="banner-logo" />
+    <img 
+      src="https://salesbuildr.com/images/salesbuildr.png" 
+      alt="Salesbuildr Logo" 
+      class="banner-logo"
+    />
     <div class="banner-text">
       <div class="banner-title">Onboarding Project Planner</div>
       <div class="banner-subtitle">4 Steps to Winning More Quotes</div>
